<resources>
    <string name="app_name">Memory</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="login">login</string>
    <string name="registration">registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="next">Next</string>
    <string name="flips">Flips</string>
    <string name="start_new_game">Start new game</string>
    <string name="foto_aufnehmen">Take a picture</string>
    <string name="profile_image">Profile Image</string>
    <string name="game">Game</string>
    <string name="history">History</string>
    <string name="ranking">Ranking</string>
    <string name="profile">Profile</string>
    <string name="accept_agbs">Accept AGBs</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
</resources>