<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_action_game"
              android:title="@string/game"
              app:showAsAction="always"
              android:icon="@drawable/ic_game"/>

        <item android:id="@+id/nav_action_history"
              android:title="@string/history"
              android:icon="@drawable/ic_history"
              app:showAsAction="always"/>

        <item android:id="@+id/nav_action_ranking"
              android:title="@string/ranking"
              android:icon="@drawable/ic_ranking"
              app:showAsAction="always"/>

        <item android:id="@+id/nav_action_profile"
              android:title="@string/profile"
              android:icon="@drawable/ic_profile"
              app:showAsAction="always"/>
    </group>

</menu>